@@ -53,6 +53,7 @@ import java.net.URI;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.mockito.Mockito.*;
@@ -135,7 +136,7 @@ public class TestDetectionResponseProcessor {
 
         MediaImpl media = new MediaImpl(
                 MEDIA_ID, mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri),
-                Collections.emptyMap(), Collections.emptyMap(), null);
+                Map.of(), Map.of(), List.of(), List.of(), null);
         media.addMetadata("FPS", String.valueOf(FPS));
         media.addMetadata("DURATION", String.valueOf(DURATION));
         media.setFrameTimeInfo(FrameTimeInfo.forConstantFrameRate(FPS, 0, false));
@@ -148,9 +149,9 @@ public class TestDetectionResponseProcessor {
             1,
             null,
             null,
-            Collections.singletonList(media),
-            Collections.emptyMap(),
-            Collections.emptyMap());
+            List.of(media),
+            Map.of(),
+            Map.of());
 
         when(inProgressJobs.containsJob(JOB_ID))
                 .thenReturn(true);
@@ -222,7 +223,7 @@ public class TestDetectionResponseProcessor {
 
     @Test
     public void testVideoResponseError() {
-        DetectionProtobuf.DetectionError error = DetectionProtobuf.DetectionError.BOUNDING_BOX_SIZE_ERROR;
+        DetectionProtobuf.DetectionError error = DetectionProtobuf.DetectionError.BAD_FRAME_SIZE;
 
         processVideoJob(error);
 
@@ -300,7 +301,7 @@ public class TestDetectionResponseProcessor {
 
     @Test
     public void testImageResponseError() {
-        DetectionProtobuf.DetectionError error = DetectionProtobuf.DetectionError.IMAGE_READ_ERROR;
+        DetectionProtobuf.DetectionError error = DetectionProtobuf.DetectionError.COULD_NOT_READ_MEDIA;
 
         DetectionProtobuf.DetectionResponse detectionResponse = DetectionProtobuf.DetectionResponse.newBuilder()
                 .setError(error)
