@@ -97,8 +97,8 @@ public class TestDetectionTaskSplitter {
 
         URI mediaUri = ioUtils.findFile("/samples/new_face_video.avi");
         MediaImpl testMedia = new MediaImpl(
-                nextId(), mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri), Collections.emptyMap(),
-                Collections.emptyMap(), null);
+                nextId(), mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri),
+                Map.of(), Map.of(), List.of(), List.of(), null);
         testMedia.setType(MediaType.VIDEO);
         testMedia.setMimeType("video/avi");
         // Video media must have FPS in metadata to support adaptive frame interval processing.
@@ -455,7 +455,7 @@ public class TestDetectionTaskSplitter {
         URI fullMediaUri = ioUtils.findFile(mediaUri);
         MediaImpl testMedia = new MediaImpl(
                 nextId(), fullMediaUri.toString(), UriScheme.get(fullMediaUri), Paths.get(fullMediaUri),
-                mediaProperties, Collections.emptyMap(), null);
+                mediaProperties, Map.of(), List.of(), List.of(), null);
         testMedia.setLength(300);
         testMedia.setType(mediaType);
         testMedia.setMimeType(mimeType);
@@ -489,8 +489,8 @@ public class TestDetectionTaskSplitter {
 
         URI mediaUri = URI.create("file:///path/to/dummy/media");
         MediaImpl testMedia = new MediaImpl(
-                nextId(), mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri), mediaProperties,
-                Collections.emptyMap(), null);
+                nextId(), mediaUri.toString(), UriScheme.get(mediaUri), Paths.get(mediaUri),
+                mediaProperties, Map.of(), List.of(), List.of(), null);
         testMedia.setType(MediaType.VIDEO);
         testMedia.setMimeType("video/dummy");
 
@@ -887,7 +887,7 @@ public class TestDetectionTaskSplitter {
     @Test
     public void testSourceMediaOnlyAndDerivativeMediaOnly() {
         var parentMedia = new MediaImpl(700, "file:///parent", UriScheme.FILE, Paths.get("/local/path/parent"),
-                Map.of(), Map.of(), null);
+                Map.of(), Map.of(), List.of(), List.of(), null);
         parentMedia.setType(MediaType.UNKNOWN);
         parentMedia.setMimeType("application/pdf");
 
@@ -934,12 +934,12 @@ public class TestDetectionTaskSplitter {
 
         // Children will be added after the extraction task in a real job.
         var childMedia1 = new MediaImpl(701, 700, 0, "file:///child1", UriScheme.FILE, Paths.get("/local/path/child1"),
-                null, Map.of(MpfConstants.IS_DERIVATIVE_MEDIA, "TRUE"), null);
+                Map.of(), Map.of(MpfConstants.IS_DERIVATIVE_MEDIA, "TRUE"), List.of(), List.of(), null);
         childMedia1.setType(MediaType.IMAGE);
         childMedia1.setMimeType("image/png");
 
         var childMedia2 = new MediaImpl(702, 700, 0, "file:///child2", UriScheme.FILE, Paths.get("/local/path/child2"),
-                null, Map.of(MpfConstants.IS_DERIVATIVE_MEDIA, "TRUE"), null);
+                Map.of(), Map.of(MpfConstants.IS_DERIVATIVE_MEDIA, "TRUE"), List.of(), List.of(), null);
         childMedia2.setType(MediaType.IMAGE);
         childMedia2.setMimeType("image/jpeg");
 
